--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
-  "name": "serve-app",
-  "version": "0.1.0",
-  "private": true,
   "scripts": {
+    "layer0:dev": "layer0 dev",
+    "layer0:build": "layer0 build",
+    "layer0:deploy": "layer0 deploy",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
+  "name": "serve-app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@layer0/cli": "^4.15.1",
+    "@layer0/core": "file:.yalc/@layer0/core",
+    "@layer0/devtools": "^4.15.1",
+    "@layer0/next": "^4.15.1",
+    "@layer0/prefetch": "^4.15.1",
+    "@layer0/react": "^4.15.1",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6"
   }
